[tool.poetry]
name = "casal"
version = "0.1.0"
description = ""
authors = ["m7142yosuke <m7142yosuke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "2.8.8"
jupyterlab = "^4.2.0"
semopy = "^2.3.11"
matplotlib = "3.7"
seaborn = "^0.13.2"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
